Improve UI spacing/paddings and fix URL schema

--- a/app/assets/stylesheets/sections/listings/_search.scss
+++ b/app/assets/stylesheets/sections/listings/_search.scss
@@ -309,8 +309,9 @@ header#listing_search {
   }
 
   &.mixed {
-    left: 10px;
-    right: 10px;
+    left: 0px;
+    right: 0px;
+    @include border-radius(0);
     max-width: 100%;
 
     form {
@@ -900,15 +901,12 @@ section.search section#results.mixed {
     overflow-x: hidden;
 
     .filters {
-      padding-right: 10px;
       padding-left: 10px;
 
       .search-mixed-filter {
-          @include border-radius($border-radius-default);
-          border: 1px solid $gray230; 
-          background-color: $gray230;
-          padding: 10px;
-          margin-bottom: 5px;
+        background-color: $gray230;
+        padding: 10px;
+        margin-bottom: 5px;
 
         ul {
           li {
@@ -917,13 +915,16 @@ section.search section#results.mixed {
           }
         }
       }
+
+      @media (max-width: 2 * $iphone-portrait) {
+        margin-right: 10px;
+      }
     }
 
     .sort {
       background-color: $black;
       line-height: 40px;
       padding: 10px;
-      margin-right: 10px;
       margin-left: 10px;
       font-size: 90%;
 
@@ -946,6 +947,10 @@ section.search section#results.mixed {
         font-size: 80%;
         color: $gray245;
       } 
+
+      @media (max-width: 2 * $iphone-portrait) {
+        margin-right: 10px;
+      }
     }
 
     .hidden-locations {
@@ -958,6 +963,7 @@ section.search section#results.mixed {
 
       .location {
         position: relative;
+        border-top: 4px solid $black;
 
         .header {
           position: relative;
@@ -977,7 +983,7 @@ section.search section#results.mixed {
         }
 
         .location-data {
-          padding-top: 15px;
+          padding-top: 25px;
         }
 
         .location-photos-container {
@@ -1064,8 +1070,6 @@ section.search section#results.mixed {
         }
 
         .tabbable {
-          padding-bottom: 50px;
-          padding-right: 10px;
 
           .tab-content {
             overflow: hidden;
@@ -1073,7 +1077,7 @@ section.search section#results.mixed {
 
           .title {
             background-color: $gray220;
-            padding: 2px;
+            padding: 5px;
             padding-left: 15px;
           }
 
@@ -1101,7 +1105,7 @@ section.search section#results.mixed {
             }
 
             .padding-top {
-              padding-top: 20px;
+              padding-top: 15px;
             }
 
             .listing-price {
@@ -1111,10 +1115,12 @@ section.search section#results.mixed {
             }
 
             .listing-name-description {
-              padding-top: 10px;
+              padding-top: 15px;
+              padding-bottom: 15px;
 
               p {
-                line-height: 90%;
+                padding-top: 10px;
+                line-height: 150%;
                 font-size: 90%;
                 margin-bottom: 0;
               }
@@ -1143,7 +1149,7 @@ section.search section#results.mixed {
         }
       }
 
-      @media (max-width: $ipad-width) {
+      @media (max-width: 2 * $iphone-portrait) {
         padding-right: 10px;
       }
     }
@@ -1154,7 +1160,7 @@ section.search section#results.mixed {
   }
 
   @media (max-width: $ipad-width) {
-    padding-top: 130px;
+    padding-top: 110px;
   } 
 }
 
